--- a/package.json
+++ b/package.json
@@ -4,20 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js",
+    "test": "mocha ./tests/*.spec.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "ajv": "^8.12.0",
+    "chai": "^4.4.1",
+    "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "hasown": "^2.0.2",
     "jsonwebtoken": "^9.0.2",
+    "mocha": "^10.3.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "sequelize": "^6.37.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "stripe": "^15.1.0"
   }
 }
